# stockholm-pt-analysis

./: .gitignore  1. Fetching.ipynb  1.0 Fetching.ipynb  1.1. Fetching Static.ipynb  2. Unzipping (discouraged).ipynb  2. Unzipping.ipynb  3. Exploration 1 (GTFS-RT).ipynb  3. Exploration 1 (GTFS-static).ipynb  3. Exploration 1.ipynb  4. Exploration 2 (GTFS-RT VP).ipynb  4. Exploration 2 (GTFS-static).ipynb  5. Exploration 3 (GTFS-RT TU) - Camille.ipynb  5. Exploration 3 (GTFS-RT TU).ipynb  5.0 Exploration 3 (GTFS-RT TU).ipynb  5.1 Exploration 3 (GTFS-RT TU) - Camille.ipynb  6.0 Analysis TripUpdates.ipynb  6.1 Analysis TripUpdates-Camille.ipynb  README.md  pyproject.toml  routes_row.csv  start.sh
.ipynb_checkpoints/: 1. Fetching-checkpoint.ipynb  1.1. Fetching Static-checkpoint.ipynb  2. Unzipping (discouraged)-checkpoint.ipynb  2. Unzipping-checkpoint.ipynb  3. Exploration 1 (GTFS-static)-checkpoint.ipynb  4. Exploration 2 (GTFS-RT VP)-checkpoint.ipynb  4. Exploration 2 (GTFS-static)-checkpoint.ipynb  5. Exploration 3 (GTFS-RT TU) - Camille-checkpoint.ipynb  5. Exploration 3 (GTFS-RT TU)-checkpoint.ipynb  5.0 Exploration 3 (GTFS-RT TU)-checkpoint.ipynb  5.1 Exploration 3 (GTFS-RT TU) - Camille-checkpoint.ipynb  6. Analysis TripUpdates-checkpoint.ipynb  6.0 Analysis TripUpdates-checkpoint.ipynb  6.1 Analysis TripUpdates-Camille-checkpoint.ipynb
data/2-working-data/: Right of Way.xlsx  camille-stops.csv  camille-trips.csv  caner-pendeltåg-stops.csv  caner-pendeltåg-trips.csv  route-2-stops.csv  routes_row_bak.csv  tvarbanan-stops.csv  (+1 more)
tests/: test_pt_analytics.py
(+2 files in other folders)
